# Botella

./: .gitignore  .mcp.json  CLAUDE.md  LAUNCH_PLAN.md  MORNING.md  PLAYWRIGHT_MCP.md  UI_UX_GUIDE.md  context.md  pyproject.toml  spec.md  state-machine-map.md
botella/: __init__.py  app.py  contract.py  push.py  runtime.py
botella/adapters/: __init__.py  http.py  telegram.py  ws.py
botella/auth/: __init__.py  apple.py  jwt.py  routes.py
botella/storage/: __init__.py  memory.py
design/: chart-bubble.html  doorway-chips.html
examples/echo_bot/: manifest.py  run.py
examples/layla_sketch/: chart.py  manifest.py  run.py
layla-app/: App.tsx  app.json  eas.json  node_modules  package-lock.json  package.json  vercel.json
layla-app/public/: manifest.webmanifest
layla-app/scripts/: inject-pwa-meta.js
layla-app/src/api/: card.ts  episodes.ts  link.ts  me.ts  orbit.ts  stream.ts  types.ts
layla-app/src/auth/: AppleSignInNudge.tsx  SignInScreen.tsx  anonymous.ts  apple.ts
layla-app/src/chat/: AdminBuildBanner.tsx  (+10 more)
mobile-template/: app.json  index.ts  package-lock.json  package.json
scripts/: demo.sh  monitor.py  smoke.py  test_typing_polish.py
scripts/e2e/: _runner.py  e2e_chat_persistence.py  e2e_get_to_know.py  e2e_noticing.py  e2e_onboarding_early.py  e2e_people_tab.py  e2e_share_card.py  run_all.py
tests/: conftest.py  test_account_delete.py  test_account_link.py  test_apple_auth.py  test_echo_bot_e2e.py  test_layla_sketch.py  test_layla_sketch_http.py  test_push.py  test_runtime.py  test_telegram_adapter.py  test_ws_adapter.py  test_ws_keepalive.py
(+31 files in other folders)
