[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botella"
version = "0.0.1"
description = "Wrap a Python Telegram bot's brain into a transport-neutral runtime that can also serve native iOS/Android chat clients."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.6,<22",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "python-telegram-bot>=21.6,<22",
]

[tool.hatch.build.targets.wheel]
packages = ["botella"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
